Fixed Horizontal Scroll + Updated Images

--- a/css/app.css
+++ b/css/app.css
@@ -9,6 +9,9 @@
   font-style: normal;
 }
 
+html {
+  overflow-x: hidden;
+}
 
 .redbtn{
   padding-top: 100px;
